--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ main > img {
 }
 
 #sobre_loja > h2,
-#produtos > h2 {
+.container_produtos > h2 {
     text-align: center;
     font-family: 'IBM', sans-serif;
 }
@@ -109,7 +109,7 @@ hr {
     font-size: 1.5rem;
 }
 
-#produtos, h2 {
+.container_produtos, h2 {
     margin: 20px;
 }
 
