--- a/styles.css
+++ b/styles.css
@@ -260,6 +260,7 @@ footer {
     #slide {
         background: #fff;
         height: 2.6em;
+        display: none;
     }
     .submenu {
         width: 100%;
@@ -331,6 +332,30 @@ footer {
     #redes_sociais_footer > li > img {
         width: 70%;
     }
+    @keyframes subirDescer {
+        10% {
+            bottom: 20px;
+        }
+        70% {
+            bottom: 35px;
+        }
+        100% {
+            bottom: 20px;
+        }
+    }
+    .volta {
+        width: 20px;
+        height: 10px;
+        position: fixed;
+        bottom: 20px;
+        right: 10px;
+        animation:  subirDescer 2s ease infinite;
+    }
+    .volta > .fa-solid {
+        font-size: 30px;
+        color: rgb(19, 19, 165);
+    }
+
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) and (orientation: landscape){
