--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     margin: auto;
 }
 header {
-    background-color: red;
+    background-color:  rgb(19, 19, 165);
 }
 
 header > .container {
